[package]
name = "mole"
version = "0.1.0"
authors = ["Jianing Yang <jianingy.yang@gmail.com>"]

[dependencies]
ansi_term = "0.9.0"
env_logger = "0.3"
hyper = "0.9"
itertools = "0.4.18"
lazy_static = "0.1"
libsqlite3-sys = "0.5"
log = "0.3"
net2 = "0.2"
r2d2 = "0.7.0"
r2d2_sqlite = "0.1.0"
regex = "0.1"
rusqlite = "0.7.3"
serde = "0.8.8"

[dependencies.clap]
version = "2"
features = ["suggestions", "color"]

[dependencies.serde_json]
version = "0.8"
