[package]
name = "mole"
version = "0.2.1"
authors = ["Jianing Yang <jianingy.yang@gmail.com>"]

[dependencies]
ansi_term = "0.9.0"
env_logger = "0.3"
error-chain = "0.5.0"
hyper = "0.9"
itertools = "0.4.18"
lazy_static = "0.1"
log = "0.3"
net2 = "0.2"
nickel = "0.8"
r2d2 = "0.7.0"
r2d2_postgres = "0.10.1"
regex = "0.1"
rusqlite = "0.7.3"


[dependencies.clap]
version = "2"
features = ["suggestions", "color"]

[dependencies.chrono]
version = "0.2"
features = ["serde", "rustc-serialize"]

[dependencies.postgres]
version = "0.11"
features = ["chrono"]

[dependencies.serde]
version = "0.8.8"

[dependencies.serde_json]
version = "0.8"
